# haskell_sample

./: App.cabal  stack.yaml
.stack-work/install/x86_64-linux/lts-11.15/8.2.2/flag-cache/: App-0.1.0.0  basement-0.0.7-IRcTCDmYoctGxt4FUYqdQc  cryptonite-0.25-62KWfqjG1f38Ag9mk6p5ih  expiring-cache-map-0.0.6.1-59sKZQCuOq337SHoaZOA03  foundation-0.0.20-HOitMdSXh1H2RFYoixhqVb  fsnotify-0.2.1.1-GyRv3Do53QeCRuv4Fp20ef  hinotify-0.3.9-EGS0JK3sdmbB9cxB8hIv6q  memory-0.14.16-90ZvZkwyKaT183ULDNL3KX  mime-types-0.1.0.7-GTWaalA8h3lKGJVZRtpBT1  persistent-postgresql-2.8.2.0-1AZsS8heD2WDcy3jR9hX64  postgresql-libpq-0.9.4.1-D7fdyrPeqEbJg0DrI4jzfs  postgresql-simple-0.5.4.0-LgPHf4tnbf651H3Jdk1JP3  system-fileio-0.3.16.3-Fl5GZs2hcdw6p6mSNqw81G  system-filepath-0.4.14-3kAg8dHynhkKDnII6RpN2m  wai-middleware-static-0.8.2-GrCuygiduL4IygdB2ELelg  yaml-0.8.30-71OuQF0LALr6I8ANQhLw03
src/: .Main.hs.swp  Main.hs  Models.hs  ModelsJson.hs
