name:                App
version:             0.1.0.0
synopsis:            App backend JSON API server
license:             AllRightsReserved
license-file:        LICENSE
author:              Cidevant
maintainer:          cidevant@mail.ru
category:            Web
build-type:          Simple
cabal-version:       >= 1.20

executable App
  hs-source-dirs:        src
  main-is:               Main.hs
  other-modules:         Models
                       , ModelsJson
  -- other-extensions:
  build-depends:          base >= 4 && < 5
                        , scotty > 0.7
                        , aeson
                        , resourcet
                        , persistent
                        , persistent-postgresql
                        , monad-logger
                        , persistent-template
                        , http-types
                        , text
                        , bytestring
                        , time
                        , wai-extra
                        , wai-middleware-static
                        , transformers
                        , blaze-html
                        , scientific >= 0.2.0.2
                        , yaml
                        , conduit
                        , aeson

                        -- hDevTools with cabal-sandbox env.
--                        , cabal-cargs

                        -- Live reload
                        , fsnotify
                        , system-fileio
                        , system-filepath
                        , process
                        , mtl

  default-language:    Haskell2010
  ghc-options:         -Wall -threaded

